# Vishnusahasranamam_App

./: .gitignore  AGENTS.md  README.md  Run Vishnusahasranamam Web.command  app.js  index.html  pyproject.toml  service-worker.js  styles.css
.github/workflows/: deploy-pages.yml  pages.yml
data/: search-data.json
docs/: app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
scripts/: audit_all_namas.py  audit_app_exact_search.py  audit_app_name_search.py  audit_canonical_tables.py  audit_clean_docx_source.py  audit_english_spelling.py  audit_entries.py  audit_pdf_ocr_studio_sources.py  audit_rendered_entries_quality.py  audit_rendered_formatting.py  audit_rendered_text_defects.py  build_canonical_namas.py  build_derivation_overrides.py  build_macos_app.sh  build_static_pwa.py  check_environment.py  fetch_clean_slokas.py  generate_clean_docx_from_scans.py
src/: vishnu_desktop_app.py
src/vishnu_retrieval/: __init__.py  canonical.py  cli.py  corrections.py  desktop_app.py  docx_source.py  epub_source.py  indexer.py  io.py  models.py  nama_index.py  ocr.py  quality.py  search.py  textutil.py  web_app.py
src/vishnu_retrieval/web_static/: app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
tests/: test_canonical_namas.py  test_search.py  test_textutil.py  test_web_app.py
