[project]
name = "vishnusahasranamam"
version = "0.1.0"
description = "Page-aware OCR, exact search, and hybrid retrieval for a scanned Vishnusahasranamam PDF."
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]
desktop = [
  "PySide6>=6.8.0"
]
bundle = [
  "pyinstaller>=6.11.0"
]
semantic = [
  "sentence-transformers>=3.0.0",
  "numpy>=1.26.0"
]

[project.scripts]
vishnu = "vishnu_retrieval.cli:main"
vishnu-app = "vishnu_retrieval.desktop_app:main"
vishnu-web = "vishnu_retrieval.web_app:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vishnu_retrieval = ["web_static/*"]
